Sec39_Chap358-XXX: optimized test code